--- a/hr-hospital/views/hr_hospital_disease_views.xml
+++ b/hr-hospital/views/hr_hospital_disease_views.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <record id="view_hr_hospital_disease_tree" model="ir.ui.view">
         <field name="name">hr.hospital.disease.tree</field>
@@ -5,7 +6,10 @@
         <field name="arch" type="xml">
             <tree>
                 <field name="name"/>
-                <field name="description"/>
+                <field name="icd10_code"/>
+                <field name="parent_id"/>
+                <field name="danger_level"/>
+                <field name="is_contagious"/>
             </tree>
         </field>
     </record>
@@ -17,14 +21,62 @@
             <form>
                 <sheet>
                     <group>
-                        <field name="name"/>
-                        <field name="active"/>
+                        <group string="Basic Information">
+                            <field name="name"/>
+                            <field name="icd10_code"/>
+                            <field name="parent_id"/>
+                            <field name="active"/>
+                        </group>
+                        <group string="Classification">
+                            <field name="danger_level"/>
+                            <field name="is_contagious"/>
+                        </group>
                     </group>
-                    <group>
-                        <field name="description"/>
+                    <group string="Description">
+                        <field name="description" nolabel="1"/>
+                    </group>
+                    <group string="Symptoms">
+                        <field name="symptoms" nolabel="1"/>
+                    </group>
+                    <group string="Spread Regions">
+                        <field name="region_ids" widget="many2many_tags" nolabel="1"/>
+                    </group>
+                    <group string="Child Diseases">
+                        <field name="child_ids" nolabel="1">
+                            <tree>
+                                <field name="name"/>
+                                <field name="icd10_code"/>
+                                <field name="danger_level"/>
+                            </tree>
+                        </field>
                     </group>
                 </sheet>
             </form>
+        </field>
+    </record>
+
+    <record id="view_hr_hospital_disease_search" model="ir.ui.view">
+        <field name="name">hr.hospital.disease.search</field>
+        <field name="model">hr.hospital.disease</field>
+        <field name="arch" type="xml">
+            <search>
+                <field name="name"/>
+                <field name="icd10_code"/>
+                <filter string="Contagious"
+                        name="contagious"
+                        domain="[('is_contagious', '=', True)]"/>
+                <filter string="High Danger"
+                        name="high_danger"
+                        domain="[('danger_level', 'in', ['high', 'critical'])]"/>
+                <group expand="0" string="Group By">
+                    <filter string="Danger Level"
+                            name="group_danger"
+                            context="{'group_by': 'danger_level'}"/>
+                    <filter string="Parent Disease"
+                            name="group_parent"
+                            context="{'group_by': 'parent_id'}"/>
+                </group>
+            </search>
         </field>
     </record>
 
