--- a/hr-hospital/views/hr_hospital_doctor_views.xml
+++ b/hr-hospital/views/hr_hospital_doctor_views.xml
@@ -1,13 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <record id="view_hr_hospital_doctor_tree" model="ir.ui.view">
         <field name="name">hr.hospital.doctor.tree</field>
         <field name="model">hr.hospital.doctor</field>
         <field name="arch" type="xml">
             <tree>
-                <field name="name"/>
-                <field name="specialty"/>
+                <field name="full_name"/>
+                <field name="speciality_id"/>
+                <field name="license_number"/>
                 <field name="phone"/>
                 <field name="email"/>
+                <field name="is_intern"/>
+                <field name="rating"/>
             </tree>
         </field>
     </record>
@@ -18,19 +22,107 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
+                    <field name="image_1920" widget="image" class="oe_avatar"
+                           options="{'preview_image': 'image_128'}"/>
+                    <div class="oe_title">
+                        <h1>
+                            <field name="full_name" readonly="1"/>
+                        </h1>
+                    </div>
                     <group>
-                        <group>
-                            <field name="name"/>
-                            <field name="specialty"/>
+                        <group string="Personal Information">
+                            <field name="last_name"/>
+                            <field name="first_name"/>
+                            <field name="middle_name"/>
+                            <field name="date_of_birth"/>
+                            <field name="age"/>
+                            <field name="gender"/>
                         </group>
-                        <group>
+                        <group string="Contact Information">
                             <field name="phone"/>
                             <field name="email"/>
+                            <field name="country_id"/>
+                            <field name="lang_id"/>
+                        </group>
+                    </group>
+                    <group>
+                        <group string="Professional Information">
+                            <field name="speciality_id"/>
+                            <field name="license_number"/>
+                            <field name="license_date"/>
+                            <field name="experience_years"/>
+                            <field name="rating"/>
+                            <field name="education_country_id"/>
+                        </group>
+                        <group string="System">
+                            <field name="user_id"/>
+                            <field name="is_intern"/>
+                            <field name="mentor_id"
+                                   invisible="not is_intern"/>
                             <field name="active"/>
                         </group>
                     </group>
+                    <notebook>
+                        <page string="Patients" name="patients">
+                            <field name="patient_ids">
+                                <tree>
+                                    <field name="full_name"/>
+                                    <field name="phone"/>
+                                    <field name="blood_type"/>
+                                </tree>
+                            </field>
+                        </page>
+                        <page string="Schedule" name="schedule">
+                            <field name="schedule_ids">
+                                <tree editable="bottom">
+                                    <field name="day_of_week"/>
+                                    <field name="date"/>
+                                    <field name="time_from" widget="float_time"/>
+                                    <field name="time_to" widget="float_time"/>
+                                    <field name="schedule_type"/>
+                                    <field name="notes"/>
+                                </tree>
+                            </field>
+                        </page>
+                        <page string="Visits" name="visits">
+                            <field name="visit_ids" readonly="1">
+                                <tree>
+                                    <field name="scheduled_datetime"/>
+                                    <field name="patient_id"/>
+                                    <field name="visit_type"/>
+                                    <field name="state"/>
+                                </tree>
+                            </field>
+                        </page>
+                    </notebook>
                 </sheet>
             </form>
+        </field>
+    </record>
+
+    <record id="view_hr_hospital_doctor_search" model="ir.ui.view">
+        <field name="name">hr.hospital.doctor.search</field>
+        <field name="model">hr.hospital.doctor</field>
+        <field name="arch" type="xml">
+            <search>
+                <field name="full_name"/>
+                <field name="speciality_id"/>
+                <field name="license_number"/>
+                <filter string="Interns"
+                        name="interns"
+                        domain="[('is_intern', '=', True)]"/>
+                <filter string="Has License"
+                        name="has_license"
+                        domain="[('license_number', '!=', False)]"/>
+                <group expand="0" string="Group By">
+                    <filter string="Speciality"
+                            name="group_speciality"
+                            context="{'group_by': 'speciality_id'}"/>
+                    <filter string="Education Country"
+                            name="group_education"
+                            context="{'group_by': 'education_country_id'}"/>
+                </group>
+            </search>
         </field>
     </record>
 
