feat: module 4 advanced functionality for hospital module

--- a/hr-hospital/views/hr_hospital_disease_views.xml
+++ b/hr-hospital/views/hr_hospital_disease_views.xml
@@ -76,6 +76,17 @@
                             name="group_parent"
                             context="{'group_by': 'parent_id'}"/>
                 </group>
+                <searchpanel>
+                    <field name="parent_id"
+                           icon="fa-medkit"
+                           select="multi"
+                           hierarchize="1"
+                           enable_counters="1"/>
+                    <field name="danger_level"
+                           icon="fa-exclamation-triangle"
+                           select="multi"
+                           enable_counters="1"/>
+                </searchpanel>
             </search>
         </field>
     </record>
