--- a/hr-hospital/wizards/disease_report_wizard_views.xml
+++ b/hr-hospital/wizards/disease_report_wizard_views.xml
@@ -6,20 +6,17 @@
         <field name="arch" type="xml">
             <form>
                 <group>
-                    <group string="Date Range">
+                    <group string="Period">
                         <field name="date_from"/>
                         <field name="date_to"/>
-                    </group>
-                    <group string="Report Options">
-                        <field name="report_type"/>
-                        <field name="group_by"/>
                     </group>
                 </group>
                 <group>
                     <group string="Filters">
-                        <field name="doctor_ids" widget="many2many_tags"/>
-                        <field name="disease_ids" widget="many2many_tags"/>
-                        <field name="country_ids" widget="many2many_tags"/>
+                        <field name="doctor_ids" widget="many2many_tags"
+                               placeholder="All doctors if empty..."/>
+                        <field name="disease_ids" widget="many2many_tags"
+                               placeholder="All diseases if empty..."/>
                     </group>
                 </group>
                 <footer>
@@ -33,11 +30,14 @@
         </field>
     </record>
 
+    <!-- Action for Print menu on Doctor -->
     <record id="action_disease_report_wizard" model="ir.actions.act_window">
         <field name="name">Disease Report</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">disease.report.wizard</field>
         <field name="view_mode">form</field>
         <field name="target">new</field>
+        <field name="binding_model_id" ref="hr-hospital.model_hr_hospital_doctor"/>
+        <field name="binding_view_types">list,form</field>
     </record>
 </odoo>
